adding some more comments

--- a/scripts/pkl_jar.ipynb
+++ b/scripts/pkl_jar.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is where we analyze the pkls of already-run experiments."
+    "This is where we analyze the pkls of already-run experiments. The plots for the paper were generated in this notebook."
    ]
   },
   {
@@ -173,11 +173,8 @@
     "true_prac_loss_tuples = output_data[\"true_prac_loss_tuples\"]\n",
     "instance_names = [\"Eugene_2020\", \"Petaluma_2022\", \"Deschutes_2024\"]\n",
     "y_axis_label = r\"$L^{\\ell_1}(A, \\hat{\\mathcal{D}}_{\\boldsymbol{\\rho}})$\"\n",
-    "#alt_indices, upper_bound, lower_bound, losses, loss_labels, instance_name, k, filename, true_prac_loss =None, loss_type = 'l1', with_stddev = True\n",
     "plot_losses_for_dataset(instance_names, all_alt_indices, ubs, lbs, losses, loss_labels, ks, f\"../plots/simulation3/{dataset}/{dataset}_losses_{loss_metric}_line_plot_no_stddev.pdf\", true_prac_loss_tuples, with_stddev=False, ylabel=y_axis_label)\n",
-    "# plot_losses_for_dataset(instance_names, all_alt_indices, ubs, lbs, losses, loss_labels, ks, f\"../plots/simulation3/{dataset}/{dataset}_losses_{loss_metric}_line_plot_with_stddev.pdf\", true_prac_loss_tuples, with_stddev=True, ylabel=y_axis_label)\n",
-    "\n",
-    "# plotter.plot_losses_with_shaded_bands(all_alt_indices[\"Petaluma_2022\"], ubs[\"Petaluma_2022\"], lbs[\"Petaluma_2022\"], losses[\"Petaluma_2022\"], loss_labels, \"Petaluma_2022\", int(ks[\"Petaluma_2022\"]), f\"../plots/simulation3/{dataset}/Petaluma_2022_{dataset}_losses_{loss_metric}_shaded_bands.pdf\", true_prac_loss=true_prac_loss_tuples[\"Petaluma_2022\"])"
+    "# plot_losses_for_dataset(instance_names, all_alt_indices, ubs, lbs, losses, loss_labels, ks, f\"../plots/simulation3/{dataset}/{dataset}_losses_{loss_metric}_line_plot_with_stddev.pdf\", true_prac_loss_tuples, with_stddev=True, ylabel=y_axis_label)"
    ]
   },
   {
@@ -206,14 +203,13 @@
     "true_prac_loss_tuples = output_data[\"true_prac_loss_tuples\"]\n",
     "instance_names = [\"Eugene_2020\", \"Petaluma_2022\", \"Deschutes_2024\"]\n",
     "y_axis_label = r'$dev^{\\ell_1}(K \\setminus D \\cup R)$'\n",
-    "#alt_indices, upper_bound, lower_bound, losses, loss_labels, instance_name, k, filename, true_prac_loss =None, loss_type = 'l1', with_stddev = True\n",
     "plot_losses_for_dataset(instance_names, all_alt_indices, ubs, lbs, losses, loss_labels, ks, f\"../plots/simulation1/{dataset}/{dataset}_losses_{loss_metric}_line_plot_no_stddev.pdf\", true_prac_loss_tuples, with_stddev=False, ylabel=y_axis_label)\n",
     "# plot_losses_for_dataset(instance_names, all_alt_indices, ubs, lbs, losses, loss_labels, ks, f\"../plots/simulation1/{dataset}/{dataset}_losses_{loss_metric}_line_plot_with_stddev.pdf\", true_prac_loss_tuples, with_stddev=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -246,6 +242,7 @@
     }
    ],
    "source": [
+    "# robustness plots\n",
     "gammas = [0, 0.2, 0.4, 0.6]\n",
     "loss_labels = ['Practitioner', 'Greedy', 'L1 Eq Probs', 'Binary Opt', 'L1 Opt']\n",
     "\n",
@@ -282,6 +279,7 @@
     "        file_path = f\"../logging/HD/robustness/robustness_test_{instance}_losses_gamma_{gamma}_num_alts_6.pkl\"\n",
     "        with open(file_path, \"rb\") as f:\n",
     "            output_data = pickle.load(f)\n",
+    "        # Petaluma had two separate runs that we had to combine\n",
     "        if instance == \"Petaluma_2022\":\n",
     "            file_path_old = f\"../logging/HD/robustness/Petaluma_robustness_initial_10/robustness_test_{instance}_losses_gamma_{gamma}_num_alts_6.pkl\"\n",
     "            with open(file_path_old, \"rb\") as f2:\n",
@@ -307,7 +305,6 @@
     "                loss_dict[label] = (fixed_losses[instance][label], None)\n",
     "        print(loss_dict)        \n",
     "        data[instance][gamma] = loss_dict\n",
-    "# print(data)\n",
     "\n",
     "fig, axs = plt.subplots(1, len(instance_names), figsize=(5 * len(instance_names), 5), sharey=True)\n",
     "\n",
@@ -381,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +423,7 @@
     }
    ],
    "source": [
-    "# plotting alternate dropout sets\n",
+    "# plotting different loss metrics\n",
     "possible_loss_metrics = ['l1_dev_below', 'max_quota_dev_norm', 'max_quota_dev', 'num_unrepped']            \n",
     "dataset = \"HD\"\n",
     "pool_drop_string = ''\n",
@@ -511,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +523,7 @@
     }
    ],
    "source": [
-    "# plotting real dropout sets\n",
+    "# plotting real dropout sets for MASS\n",
     "loss_metric = \"l1\"\n",
     "pool_drop_string = \"\"\n",
     "NUM_BINARY_SAMPLES = 300\n",
@@ -555,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -570,6 +567,8 @@
     }
    ],
    "source": [
+    "# convergence plots\n",
+    "\n",
     "num_train_samples = [25, 50, 100, 200, 300, 500]\n",
     "loss_types = [\"l1\", \"l1_eq\", \"binary\"]\n",
     "dataset = \"HD\"\n",
